# ppg-hub

./: .env  .gitignore  TODOS.md  estrutura-projetos-pphub.md  mvp-schema-db-ppghub.sql  myproject.toml  overview.md  pyproject.toml  test_db.py
app/: .gitignore  deps.py  main.py
app/api/: __init__.py
app/api/routes/: docentes.py  instituicoes.py  monitoring.py  programas.py  roles.py  usuarios.py
app/core/: config.py  database.py  errors.py  logging.py
app/db/: base.py  session.py
app/models/: Instituicao.py  __init__.py  docente.py  instituicao.py  linha_pesquisa.py  programa.py  role.py  usuario.py  usuario_programa.py  usuario_programa_role.py
app/repositories/: InstituicaoRepository.py  docente_repo.py  instituicao_repo.py  programa_repo.py  role_repo.py  usuario_programa_repo.py  usuario_programa_role_repo.py  usuario_repo.py
app/schemas/: docente.py  http.py  instituicao.py  programa.py  role.py  usuario.py  usuario_programa.py  usuario_programa_role.py
app/services/: docente_service.py  instituicao_service.py  programa_service.py  role_service.py  usuario_programa_role_service.py  usuario_programa_service.py  usuario_service.py
tests/: __init__.py  conftest.py  erros_test.py  test_db_connection.py  test_instituicoes.py  test_programas.py  test_roles.py
