[project]
name = "ppghub"
version = "0.1.0"
description = "Gestão e analytics de PPG — FastAPI + SQLAlchemy + Alembic"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.18"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "black>=24.4.2"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N","ANN","DTZ"]
ignore = ["ANN101","ANN102"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
